# tessar

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  BACKLOG.md  IMPLEMENTATION.md  MVP.md  PLAN.md  README.md  package.json  pnpm-lock.yaml
.github/instructions/: architecture.instructions.md  implementation-discipline.instructions.md  product-goals.instructions.md
.github/workflows/: eval-nightly.yml  main.yml  pr.yml
apps/orchestrator/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/orchestrator/scripts/: README.md  check_schema_drift.py  init_local_emulators.py
apps/orchestrator/tessar/: __init__.py  app.py  canned_timeline.py  config.py  observability.py  paths.py  redis_bus.py  reliability.py  runner.py  storage.py
apps/orchestrator/tessar/agents/: __init__.py  _pdf_visuals.py  architect.py  cost_estimator.py  intake_normalizer.py  packager.py  requirements_extractor.py  research_planner.py  research_worker.py  risk_writer.py  synthesizer.py
apps/orchestrator/tessar/db/: __init__.py  engine.py  models.py
apps/orchestrator/tessar/kb/: __init__.py  loader.py  types.py
apps/orchestrator/tessar/llm/: __init__.py  budget.py  cache.py  embeddings.py  factory.py  router.py  tier_policy.py  types.py
apps/orchestrator/tessar/llm/providers/: __init__.py  base.py  mock.py  openai_direct.py  vertex_claude.py  vertex_gemini.py
apps/orchestrator/tessar/retrieval/: __init__.py  base.py  bm25.py  hybrid.py
apps/orchestrator/tessar/schemas/: __init__.py  architecture.py  brief.py  cost.py  requirements.py  research_findings.py  research_plan.py  risks.py  run_package.py  synthesis.py
apps/orchestrator/tessar/search/: __init__.py  base.py  factory.py  types.py
apps/orchestrator/tessar/search/providers/: __init__.py  mock.py
apps/orchestrator/tests/: test_architect.py  test_cost_estimator.py  test_intake_normalizer.py  test_kb_retrieval.py  test_llm_cache.py  test_llm_router.py  test_openai_direct_provider.py  test_packager.py  test_reliability.py  test_requirements_extractor.py  test_research_planner.py  test_research_worker.py  test_risk_writer.py  test_smoke.py  test_synthesizer.py  test_vertex_claude_provider.py
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  auth.config.ts  auth.ts  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.server-only-shim.ts  vitest.setup.ts
docs/adr/: 0000-template.md  0001-design-language-material-3-expressive.md  0002-brand-seed-color.md  0003-pivot-to-editorial-design-language.md  0004-design-lock-agent-output-contract.md  0005-phase1-mock-contracts.md  0006-expand-mvp-to-system-design-narrative.md  0006-phase1-feedback-gate-closed-offline.md  0007-orm-choice-prisma-web-sqlalchemy-worker.md  (+11 more)
evals/: README.md  pyproject.toml
evals/fixtures/: run-001.json  run-002.json  run-003.json  run-004.json  run-005.json  run-006.json  run-007.json  run-008.json  run-009.json  run-010.json
evals/reports/: .gitignore  baseline.json
evals/rubric/: __init__.py  checks.py  schema.py  scoring.py
evals/rubric/judge_prompts/: brief_fidelity.md  build_sequence.md  coherence.md  component_rationales.md  failure_modes.md  integration_contracts.md  sequence_diagrams.md  tradeoff_quality.md
evals/runners/: __init__.py  check_baseline.py  run_suite.py  score_run.py  score_suite.py  validate_kb.py
evals/scenarios/: 001-b2b-saas-crm.yaml  002-fintech-realtime-feed.yaml  003-marketplace-mvp.yaml  004-devtool-feature-flags.yaml  005-b2c-edtech-live-classes.yaml  006-internal-hr-onboarding.yaml  007-b2b-analytics-multitenant.yaml  008-fintech-smb-invoicing.yaml  009-marketplace-creator-services.yaml  010-b2b-event-webhooks.yaml  _schema.yaml
evals/tests/: test_rubric.py  test_runners.py
infra/: docker-compose.yml
kb-seed/: README.md  _schema.yaml
(+164 files in other folders)
