[project]
name = "tessar-evals"
version = "0.1.0"
description = "TESSAR end-to-end eval harness. Scores RunPackage outputs against scenarios per ADR-0008."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "click>=8.1",
    "jsonschema>=4.23",
]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rubric", "runners"]
