[project]
name = "tessar-orchestrator"
version = "0.0.0"
description = "TESSAR agent orchestrator (LangGraph + Pydantic) on Cloud Run."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-pubsub>=2.26.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-aiplatform>=1.71.0",
    "google-auth>=2.35.0",
    "python-dotenv>=1.0.1",
    "redis>=5.2.0",
    "markdown>=3.7",
    "weasyprint>=63.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tessar"]
