[project]
name = "tessar-orchestrator"
version = "0.0.0"
description = "TESSAR agent orchestrator (LangGraph + Pydantic) on Cloud Run."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-pubsub>=2.26.0",
    "google-cloud-storage>=2.18.2",
    "google-cloud-aiplatform>=1.71.0",
    "vertexai>=1.71.1",
    "google-auth>=2.35.0",
    # Vertex AI Anthropic (Claude Sonnet 4.5) — Tier-A primary per ADR-0015.
    # The `vertex` extra pulls google-auth so AnthropicVertex picks up ADC.
    "anthropic[vertex]>=0.40.0",
    # OpenAI direct — last-resort fallback for all tiers per ADR-0015.
    # Only activated when OPENAI_API_KEY is set.
    "openai>=1.50.0",
    "python-dotenv>=1.0.1",
    "redis>=5.2.0",
    "markdown>=3.7",
    "weasyprint>=63.0",
    "pyyaml>=6.0",
    # Observability (Phase 4.2). All three are optional at runtime — they
    # only activate when SENTRY_DSN / OTEL_ENABLED env vars are set, see
    # tessar/observability.py.
    "sentry-sdk[fastapi]>=2.18.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-gcp-trace>=1.7.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-asyncpg>=0.49b0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tessar"]
